tests/ui/keyword/keyword-super-as-identifier.rs
fn main() {
    let super = 22; //~ ERROR too many leading `super` keywords
}

// ferrocene-annotations: fls_7bxv8lybxm18
// Identifier Patterns
